--- a/index.html
+++ b/index.html
@@ -1,154 +1,157 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Roof - บริการงานหลังคาครบวงจร</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="images/cover.jpg" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Top Roof - บริการงานหลังคาครบวงจร</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- 🔹 Navbar -->
-    <nav>
-        <div class="container">
-            <h1 class="logo">TRIPLE N ROOF</h1>
-            <ul class="nav-links">
-                <li><a href="#services">บริการของเรา</a></li>
-                <li><a href="#whyus">ทำไมต้องเลือกเรา</a></li>
-                <li><a href="#portfolio">ผลงาน</a></li>
-                <li><a href="#contact">ติดต่อเรา</a></li>
-            </ul>
-        </div>
-    </nav>
+  <!-- 🔹 Navbar -->
+  <nav>
+    <div class="container">
+      <h1 class="logo">TRIPLE N ROOF</h1>
+      <ul class="nav-links">
+        <li><a href="#services">บริการของเรา</a></li>
+        <li><a href="#whyus">ทำไมต้องเลือกเรา</a></li>
+        <li><a href="#portfolio">ผลงาน</a></li>
+        <li><a href="#contact">ติดต่อเรา</a></li>
+      </ul>
+    </div>
+  </nav>
 
-    <!-- 🔹 Hero Section -->
-    <header class="hero">
-        <div class="hero-content">
-            <h2>หลังคารั่ว ซึม เก่า?</h2>
-            <h1>TRIPLE N ROOF แก้จบทุกปัญหา!</h1>
-            <p>บริการหลังคาครบวงจร โดยทีมงานมืออาชีพ ประเมินหน้างานฟรี</p>
-            <a href="#contact" class="cta-button">ประเมินหน้างานฟรี!</a>
-        </div>
-    </header>
+  <!-- 🔹 Hero Section -->
+  <header class="hero">
+    <div class="hero-content">
+      <h2>หลังคารั่ว ซึม เก่า?</h2>
+      <h1>TRIPLE N ROOF แก้จบทุกปัญหา!</h1>
+      <p>บริการหลังคาครบวงจร โดยทีมงานมืออาชีพ ประเมินหน้างานฟรี</p>
+      <a href="#contact" class="cta-button">ประเมินหน้างานฟรี!</a>
+    </div>
+  </header>
 
-    <!-- 🔹 Services Section -->
-    <section id="services" class="container">
-        <h2>บริการของเรา</h2>
-        <div class="service-grid">
-            <div class="service-card">
-                <div class="service-icon">Roof</div>
-                <h3>บริการ Top Roof</h3>
-                <p>เปลี่ยนหลังคาใหม่สวย ทน กันรั่ว<br>ครบทุกประเภทหลังคา — โดยทีม Top Roof</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon">ทาสี</div>
-                <h3>บริการทาสีหลังคา</h3>
-                <p>ปรับปรุงหลังคาเก่าให้เหมือนใหม่ ติดตั้งฉนวนกันร้อน (สวยงาม ทนทาน)</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon">ซ่อม</div>
-                <h3>บริการซ่อม</h3>
-                <p>รั่ว ซึม แตก ร้าว ทั้งซ่อมเฉพาะจุด และซ่อมทั้งผืน (แก้ไขตรงจุด รับประกันผลงาน)</p>
-            </div>
-        </div>
-    </section>
+  <!-- 🔹 Services Section -->
+  <section id="services" class="container">
+    <h2>บริการของเรา</h2>
+    <div class="service-grid">
+      <div class="service-card">
+        <div class="service-icon">Roof</div>
+        <h3>บริการ Top Roof</h3>
+        <p>เปลี่ยนหลังคาใหม่สวย ทน กันรั่ว<br>ครบทุกประเภทหลังคา — โดยทีม Top Roof</p>
+      </div>
+      <div class="service-card">
+        <div class="service-icon">ทาสี</div>
+        <h3>บริการทาสีหลังคา</h3>
+        <p>ปรับปรุงหลังคาเก่าให้เหมือนใหม่ ติดตั้งฉนวนกันร้อน (สวยงาม ทนทาน)</p>
+      </div>
+      <div class="service-card">
+        <div class="service-icon">ซ่อม</div>
+        <h3>บริการซ่อม</h3>
+        <p>รั่ว ซึม แตก ร้าว ทั้งซ่อมเฉพาะจุด และซ่อมทั้งผืน (แก้ไขตรงจุด รับประกันผลงาน)</p>
+      </div>
+    </div>
+  </section>
 
-    <!-- 🔹 Why Us Section -->
-    <section id="whyus" class="container">
-        <h2>ทำไมต้องเลือก ต้องเลือกเรา ?</h2>
-        <div class="whyus-grid">
-            <div class="whyus-item">
-                <h3>📸 สำรวจด้วยโดรน</h3>
-                <p>ตรวจสอบหลังคาอย่างละเอียดด้วยเทคโนโลยีโดรน<br>เห็นทุกมุม มั่นใจปัญหาไม่หลุดตา</p>
-            </div>
-            <div class="whyus-item">
-                <h3>👷 ทีมช่างผู้เชี่ยวชาญ</h3>
-                <p>ประสบการณ์มากกว่า 10 ปี ทั้งงานซ่อม เปลี่ยน และติดตั้งหลังคาทุกประเภท<br>รับประกันผลงานทุกงาน</p>
-            </div>
-            <div class="whyus-item">
-                <h3>🧰 งานมาตรฐาน </h3>
-                <p>ใช้วัสดุคุณภาพสูง ติดตั้งตามหลัก<br>เน้นความแข็งแรง ปลอดรั่ว<br>และสวยกลมกลืนกับตัวบ้าน</p>
-            </div>
-        </div>
-    </section>
+  <!-- 🔹 Why Us Section -->
+  <section id="whyus" class="container">
+    <h2>ทำไมต้องเลือก ต้องเลือกเรา ?</h2>
+    <div class="whyus-grid">
+      <div class="whyus-item">
+        <h3>📸 สำรวจด้วยโดรน</h3>
+        <p>ตรวจสอบหลังคาอย่างละเอียดด้วยเทคโนโลยีโดรน<br>เห็นทุกมุม มั่นใจปัญหาไม่หลุดตา</p>
+      </div>
+      <div class="whyus-item">
+        <h3>👷 ทีมช่างผู้เชี่ยวชาญ</h3>
+        <p>ประสบการณ์มากกว่า 10 ปี ทั้งงานซ่อม เปลี่ยน และติดตั้งหลังคาทุกประเภท<br>รับประกันผลงานทุกงาน</p>
+      </div>
+      <div class="whyus-item">
+        <h3>🧰 งานมาตรฐาน </h3>
+        <p>ใช้วัสดุคุณภาพสูง ติดตั้งตามหลัก<br>เน้นความแข็งแรง ปลอดรั่ว<br>และสวยกลมกลืนกับตัวบ้าน</p>
+      </div>
+    </div>
+  </section>
 
-    <!-- 🔹 Portfolio Section -->
-<section id="portfolio" class="container">
+  <!-- 🔹 Portfolio Section -->
+  <section id="portfolio" class="container">
     <h2>ผลงานของเรา</h2>
 
     <div class="portfolio-filters">
-        <button class="filter-btn active" data-category="install">งาน Top Roof (ติดตั้ง)</button>
-        <button class="filter-btn" data-category="paint">งานสี</button>
-        <button class="filter-btn" data-category="repair">งานซ่อม</button>
+      <button class="filter-btn active" data-category="install">งาน Top Roof (ติดตั้ง)</button>
+      <button class="filter-btn" data-category="paint">งานสี</button>
+      <button class="filter-btn" data-category="repair">งานซ่อม</button>
     </div>
 
     <div class="portfolio-grid">
-        <div class="portfolio-item" data-category="install">
-            <img src="images/install-example-1.jpg" alt="ผลงานติดตั้ง 1">
-        </div>
-        <div class="portfolio-item" data-category="install">
-            <img src="images/install-example-2.jpg" alt="ผลงานติดตั้ง 2">
-        </div>
-        <div class="portfolio-item" data-category="install">
-            <img src="images/install-example-3.jpg" alt="ผลงานติดตั้ง 3">
-        </div>
-        <div class="portfolio-item" data-category="install">
-            <img src="images/install-example-4.jpg" alt="ผลงานติดตั้ง 4">
-        </div>
+      <div class="portfolio-item" data-category="install">
+        <img src="images/install-example-1.jpg" alt="ผลงานติดตั้ง 1">
+      </div>
+      <div class="portfolio-item" data-category="install">
+        <img src="images/install-example-2.jpg" alt="ผลงานติดตั้ง 2">
+      </div>
+      <div class="portfolio-item" data-category="install">
+        <img src="images/install-example-3.jpg" alt="ผลงานติดตั้ง 3">
+      </div>
+      <div class="portfolio-item" data-category="install">
+        <img src="images/install-example-4.jpg" alt="ผลงานติดตั้ง 4">
+      </div>
 
-        <div class="portfolio-item" data-category="paint">
-            <img src="images/paint-example-1.jpg" alt="ผลงานทาสี 1">
-        </div>
-        <div class="portfolio-item" data-category="paint">
-            <img src="images/paint-example-2.jpg" alt="ผลงานทาสี 2">
-        </div>
-        <div class="portfolio-item" data-category="paint">
-            <img src="images/paint-example-3.jpg" alt="ผลงานทาสี 3">
-        </div>
-        <div class="portfolio-item" data-category="paint">
-            <img src="images/paint-example-4.jpg" alt="ผลงานทาสี 4">
-        </div>
+      <div class="portfolio-item" data-category="paint">
+        <img src="images/paint-example-1.jpg" alt="ผลงานทาสี 1">
+      </div>
+      <div class="portfolio-item" data-category="paint">
+        <img src="images/paint-example-2.jpg" alt="ผลงานทาสี 2">
+      </div>
+      <div class="portfolio-item" data-category="paint">
+        <img src="images/paint-example-3.jpg" alt="ผลงานทาสี 3">
+      </div>
+      <div class="portfolio-item" data-category="paint">
+        <img src="images/paint-example-4.jpg" alt="ผลงานทาสี 4">
+      </div>
 
-        <div class="portfolio-item" data-category="repair">
-            <img src="images/repair-example-1.jpg" alt="ผลงานซ่อม 1">
-        </div>
-        <div class="portfolio-item" data-category="repair">
-            <img src="images/repair-example-2.jpg" alt="ผลงานซ่อม 2">
-        </div>
-        <div class="portfolio-item" data-category="repair">
-            <img src="images/repair-example-3.jpg" alt="ผลงานซ่อม 3">
-        </div>
-        <div class="portfolio-item" data-category="repair">
-            <img src="images/repair-example-4.jpg" alt="ผลงานซ่อม 4">
-        </div>
+      <div class="portfolio-item" data-category="repair">
+        <img src="images/repair-example-1.jpg" alt="ผลงานซ่อม 1">
+      </div>
+      <div class="portfolio-item" data-category="repair">
+        <img src="images/repair-example-2.jpg" alt="ผลงานซ่อม 2">
+      </div>
+      <div class="portfolio-item" data-category="repair">
+        <img src="images/repair-example-3.jpg" alt="ผลงานซ่อม 3">
+      </div>
+      <div class="portfolio-item" data-category="repair">
+        <img src="images/repair-example-4.jpg" alt="ผลงานซ่อม 4">
+      </div>
     </div>
-</section>
-    <!-- 🔹 Contact Section -->
-    <section id="contact" class="contact-section">
-        <div class="container">
-            <h2>ติดต่อ งานหลังคาโดยช่างผู้เชี่ยวชาญ วันนี้!</h2>
-            <p>ปรึกษาปัญหาหลังคา ประเมินหน้างานฟรี ไม่มีค่าใช้จ่ายแอบแฝง</p>
-            <div class="contact-info">
-                <p><strong>โทร:</strong> 062-435-7942 และ 092-281-8701 </p>
-                <p><strong>Line:</strong> @toproof</p>
-                <p><strong>Facebook:</strong> ซ่อมหลังคาและทาสีหลังคา </p>
-            </div>
-        </div>
-    </section>
+  </section>
 
-    <!-- 🔹 Footer -->
-    <footer>
-        <p>© 2025 Top Roof Quality Roofing Solutions. All rights reserved.</p>
-    </footer>
-<div id="floating-contact">
+  <!-- 🔹 Contact Section -->
+  <section id="contact" class="contact-section">
+    <div class="container">
+      <h2>ติดต่อ งานหลังคาโดยช่างผู้เชี่ยวชาญ วันนี้!</h2>
+      <p>ปรึกษาปัญหาหลังคา ประเมินหน้างานฟรี ไม่มีค่าใช้จ่ายแอบแฝง</p>
+      <div class="contact-info">
+        <p><strong>โทร:</strong> 062-435-7942 และ 092-281-8701 </p>
+        <p><strong>Line:</strong> @toproof</p>
+        <p><strong>Facebook:</strong> ซ่อมหลังคาและทาสีหลังคา </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- 🔹 Footer -->
+  <footer>
+    <p>© 2025 Top Roof Quality Roofing Solutions. All rights reserved.</p>
+  </footer>
+
+  <!-- 🔹 Floating Contact Buttons -->
+  <div id="floating-contact">
     <a href="images/q-rode.png" target="_blank" class="btn-line" title="ติดต่อทาง LINE">
-        <svg xmlns="images/line.png" width="32" height="32" fill="currentColor" class="bi bi-line" viewBox="0 0 16 16">...</svg>
+      <svg xmlns="images/line.png" width="32" height="32" fill="currentColor" class="bi bi-line" viewBox="0 0 16 16">...</svg>
     </a>
     <a href="tel:09228187101" class="btn-phone" title="โทรเลย">
-         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">...</svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">...</svg>
     </a>
-</div>
-    <script src="script.js"></script>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
