--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="service-card">
         <div class="service-icon">ทาสี</div>
         <h3>บริการทาสีหลังคา</h3>
-        <p>ปรับปรุงหลังคาเก่าให้เหมือนใหม่ ติดตั้งฉนวนกันร้อน (สวยงาม ทนทาน)</p>
+        <p>งานทาสีหลังคา เพื่อพลิกโฉมหลังคาเก่าให้กลับมาสวยงามเหมือนใหม่</p>
       </div>
       <div class="service-card">
         <div class="service-icon">ซ่อม</div>
@@ -155,3 +155,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
