--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   </footer>
 
   <div id="floating-contact">
-    <a href="https://line.me/ti/p/@3n2547" target="_blank" class="btn-line" title="ติดต่อทาง LINE">
+    <a href="https://line.me/ti/p/J4tYZWY7At" target="_blank" class="btn-line" title="ติดต่อทาง LINE">
       <img src="images/line.png" alt="LINE Icon">
     </a>
     <a href="tel:0624357942" class="btn-phone" title="โทรเลย">
@@ -193,3 +193,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
